# ChangeLog for sys-libs/glibc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.1028 2014/10/26 08:05:50 vapier Exp $

  26 Oct 2014; Mike Frysinger <vapier@gentoo.org> glibc-2.19-r1.ebuild:
  Mark s390 stable.

  18 Oct 2014; Mike Frysinger <vapier@gentoo.org> files/eblits/common.eblit:
  Tweak nonfatal wrapping #523332#9 by Alexander Tsoy.

  17 Oct 2014; Mike Frysinger <vapier@gentoo.org> files/eblits/common.eblit,
  files/eblits/pkg_setup.eblit, glibc-2.19-r1.ebuild:
  Tweak nonfatal indirection for EAPI=0 to fix binpkg handling #523332 by Alex
  Efros.

  18 Sep 2014; Mike Frysinger <vapier@gentoo.org> files/eblits/common.eblit,
  files/eblits/src_configure.eblit:
  Move away from has_multilib_profile and rely on USE=multilib now that the flag
  should be sane across profiles #522900 by Xavier Miller.

  17 Sep 2014; Mike Frysinger <vapier@gentoo.org> files/eblits/common.eblit,
  files/eblits/pkg_setup.eblit, files/eblits/src_test.eblit:
  Use `nonfatal` with emake when we check the return value ourselves #522962 by
  Manuel Lauss.

  16 Sep 2014; Mike Frysinger <vapier@gentoo.org> glibc-2.20.ebuild:
  Move timezone-data dep to PDEPEND as it only loosely needs it at runtime
  #517694 by Joakim Tjernlund.

  10 Sep 2014; Mike Frysinger <vapier@gentoo.org> files/eblits/common.eblit:
  Use SYSROOT when looking for source rather than ROOT #473728 by Benda Xu.

  10 Sep 2014; Mike Frysinger <vapier@gentoo.org> glibc-2.20.ebuild:
  Upgrade EAPI to 4 #473728 by Benda Xu.

  10 Sep 2014; Mike Frysinger <vapier@gentoo.org>
  +files/eblits/src_configure.eblit, files/eblits/src_compile.eblit:
  Split src_configure out of src_compile #473728 by Benda Xu.

  10 Sep 2014; Mike Frysinger <vapier@gentoo.org> files/eblits/common.eblit,
  files/eblits/src_compile.eblit, files/eblits/src_install.eblit,
  files/eblits/src_test.eblit:
  Combine ABI for loops into one helper.
