@@ -1,9 +1,10 @@
 DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=>=app-misc/pax-utils-0.1.10 !<sys-apps/sandbox-1.6 !<sys-apps/portage-2.1.2 selinux? ( sys-libs/libselinux ) >=sys-devel/binutils-2.20 >=sys-devel/gcc-4.4 virtual/os-headers sys-devel/gnuconfig virtual/pkgconfig
+DEPEND=>=app-misc/pax-utils-0.1.10 !<sys-apps/sandbox-1.6 !<sys-apps/portage-2.1.2 selinux? ( sys-libs/libselinux ) >=sys-devel/binutils-2.24 >=sys-devel/gcc-4.4 virtual/os-headers sys-devel/gnuconfig virtual/pkgconfig
 DESCRIPTION=GNU libc6 (also called glibc2) C library
 EAPI=4
 HOMEPAGE=http://www.gnu.org/software/libc/libc.html
 IUSE=debug gd hardened multilib nscd selinux systemtap profile suid vanilla crosscompile_opts_headers-only
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 -hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
 LICENSE=LGPL-2.1+ BSD HPND ISC inner-net rc PCRE
 PDEPEND=!vanilla? ( sys-libs/timezone-data )
 RDEPEND=!sys-kernel/ps3-sources selinux? ( sys-libs/libselinux ) !sys-libs/nss-db vanilla? ( !sys-libs/timezone-data )
@@ -11,4 +12,4 @@ RESTRICT=strip
 SLOT=2.2
 SRC_URI=mirror://gnu/glibc/glibc-2.20.tar.xz ftp://sourceware.org/pub/glibc/releases/glibc-2.20.tar.xz ftp://sourceware.org/pub/glibc/snapshots/glibc-2.20.tar.xz mirror://gentoo/glibc-2.20.tar.xz mirror://gentoo/glibc-2.20-patches-1.tar.bz2 http://dev.gentoo.org/~vapier/dist/glibc-2.20-patches-1.tar.bz2 http://dev.gentoo.org/~azarah/glibc/glibc-2.20-patches-1.tar.bz2 multilib? ( mirror://gentoo/gcc-4.7.3-r1-multilib-bootstrap.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.7.3-r1-multilib-bootstrap.tar.bz2 http://dev.gentoo.org/~azarah/glibc/gcc-4.7.3-r1-multilib-bootstrap.tar.bz2 )
 _eclasses_=eutils	c91a1ac3fefc6b077094fb2e82c65af4	flag-o-matic	eda1c0b5ba85b3eeb555a071d69eb819	gnuconfig	ee02e61d6c68cee478e2e69214b7caef	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	unpacker	f300a7ca9131b1024a79762e8edd3c52	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=9be430c979158ffdaa1c2fec603bfa1e
+_md5_=a849455c1fb322e6ca7881b74c2cd422
