@@ -1,6 +1,10 @@
 # ChangeLog for sys-libs/glibc
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.1028 2014/10/26 08:05:50 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.1029 2014/11/07 02:12:32 vapier Exp $
+
+  07 Nov 2014; Mike Frysinger <vapier@gentoo.org> glibc-2.20.ebuild:
+  Move into unstable for all but hppa.  Require binutils-2.24 as some arches
+  (like s390) need it.
 
   26 Oct 2014; Mike Frysinger <vapier@gentoo.org> glibc-2.19-r1.ebuild:
   Mark s390 stable.
